// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TranslationProvider exposes the translation function via useTranslation hook 1`] = `
<DocumentFragment>
  <span>
    Search
  </span>
  <span>
    1 review
  </span>
  <span>
    4 reviews
  </span>
  <span>
    Board Basis
  </span>
  <span>
    All Inclusive hotel
  </span>
  <span>
    title from namespace 1
  </span>
  <span>
    title from namespace 2
  </span>
</DocumentFragment>
`;

exports[`TranslationProvider merges namespaces when nesting providers 1`] = `
<DocumentFragment>
  <span>
    title from namespace 1
  </span>
  <span>
    title from namespace 2
  </span>
</DocumentFragment>
`;

exports[`TranslationProvider should override number format 1`] = `
<DocumentFragment>
  <span>
    12,345 reviews
  </span>
  <span>
    12.345 reviews
  </span>
</DocumentFragment>
`;
